Fix nav z-index

--- a/app/components/nav/styles.module.css
+++ b/app/components/nav/styles.module.css
@@ -4,6 +4,7 @@
   width: 100vw;
   height: 3.875rem; /* 62px */
   padding: 0 var(--layoutPaddingX);
+  z-index: 2;
 }
 
 .nav > div {
